--- a/Rapport/pfmath.sty
+++ b/Rapport/pfmath.sty
@@ -73,7 +73,7 @@
 \newcommand{\R}{\bb R}
 \newcommand{\Q}{\bb Q}
 \newcommand{\Z}{\bb Z}
-\renewcommand{\C}{\bb C}
+\newcommand{\C}{\bb C}
 \newcommand{\T}{\cal T}
 \newcommand{\A}{\cal A}
 \newcommand{\B}{\cal B}
