--- a/Soutenance/soutenance_vivien.tex
+++ b/Soutenance/soutenance_vivien.tex
@@ -63,9 +63,23 @@
 		\tableofcontents
 	\end{frame}
 	
-	\section{<cartesian section>}
+	\section{Microprocesseur}
 	
-	\begin{frame}{<cartesian frame>}
-		<text goes here>
+	\begin{frame}{Caractéristiques}
+		\begin{itemize}
+			\item Peu d'instructions (pas de multiplication notamment)
+			\item 32 registres de 32 bits
+			\item Les mêmes drapeaux qu'en x86-64
+			\item Code dans la ROM, mémoire dans la RAM
+		\end{itemize}
+	\end{frame}
+
+	\begin{frame}{Code machine}
+		\item 7 bits de code machine
+		\item 1 bit d'écriture
+		\item 16 bits de valeur d'entrée
+		\item 2 bits de type de valeur d'entrée
+		\item 5 bits de valeur de sortie
+		\item 1 bit de valeur de sortie
 	\end{frame}
 \end{document}
