--- a/Rapport/rapport_vivien.tex
+++ b/Rapport/rapport_vivien.tex
@@ -17,8 +17,7 @@
 	frame=single,
 	numberstyle=\tiny\color{violet!80!black},
 	escapeinside={\%*}{*)},
-	stringstyle=\color{black!10!yellow},
-	morecomment=[l][\color{green}]{\$}
+	stringstyle=\color{black!10!yellow}
 	}
 
 
@@ -53,7 +52,7 @@
 
 		\subsection{Le code machine}
 
-		Une instruction machine se décompose en 5 parties : 
+		Une instruction machine se décompose en 5 parties :
 		\begin{enumerate}
 			\item L'opération codé sur les 7 premiers bits. Il s'agit du parcours dans l'arbre de multiplexeur permettant de nous ramener à la bonne valeur. Nous n'utilisons pas tous les bits pour nos instructions ce qui nous permettrais d'en rajouter plus si besoin.
 
