--- a/Soutenance/soutenance_vivien.tex
+++ b/Soutenance/soutenance_vivien.tex
@@ -82,4 +82,8 @@
 		\item 5 bits de valeur de sortie
 		\item 1 bit de valeur de sortie
 	\end{frame}
+
+	\begin{frame}{Initialisation de l'horloge}
+		Division euclidienne
+	\end{frame}
 \end{document}
